frontend <> fixing overflow y on cards

--- a/front-end/styles/styles.css
+++ b/front-end/styles/styles.css
@@ -27,6 +27,7 @@
     gap: 30px;
     flex-wrap: wrap;
     overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 ::-webkit-scrollbar {
